--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,17 @@
 {
-    "name": "ft-document-panel",
-    "description": "A panel that displays a list of FileThis documents",
-    "main": "ft-document-panel.html",
-    "dependencies": {
-        "polymer": "Polymer/polymer#^1.4.0",
-        "ft-document-list-item": "FileThis/ft-document-list-item#^0.0.2",
-        "ft-document-list": "FileThis/ft-document-list#^0.0.2"
-    },
-    "devDependencies": {
-        "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-        "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-        "web-component-tester": "^4.0.0",
-        "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
-    }
+  "name": "ft-document-panel",
+  "description": "A panel that displays a list of FileThis documents",
+  "main": "ft-document-panel.html",
+  "dependencies": {
+    "polymer": "Polymer/polymer#^1.4.0",
+    "ft-document-list-item": "FileThis/ft-document-list-item#^0.0.2",
+    "ft-document-list": "FileThis/ft-document-list#^0.0.2",
+    "iron-pages": "PolymerElements/iron-pages#^1.0.8"
+  },
+  "devDependencies": {
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
+    "web-component-tester": "^4.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+  }
 }
