--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,8 @@
   "main": "ft-document-panel.html",
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
+    "ft-document-grid-item": "FileThis/ft-document-grid-item#^0.0.1",
+    "ft-document-grid": "FileThis/ft-document-grid#^0.0.1",
     "ft-document-list-item": "FileThis/ft-document-list-item#^0.0.3",
     "ft-document-list": "FileThis/ft-document-list#^0.0.4",
     "iron-pages": "PolymerElements/iron-pages#^1.0.8"
