--- a/bower.json
+++ b/bower.json
@@ -10,8 +10,10 @@
     "ft-document-list-item": "filethis/ft-document-list-item#^0.0.6",
     "ft-icon-button": "filethis/ft-icon-button#^0.0.3",
     "ft-confirmation-dialog": "filethis/ft-confirmation-dialog#^0.0.2",
+    "ft-scrolling-behavior": "filethis/ft-scrolling-behavior#^0.0.1",
     "iron-pages": "PolymerElements/iron-pages#^2.0.0",
-    "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.0"
+    "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
