--- a/bower.json
+++ b/bower.json
@@ -3,27 +3,28 @@
   "description": "A panel that displays a list of FileThis documents",
   "main": "ft-document-panel.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.1",
+    "ft-confirmation-dialog": "filethis/ft-confirmation-dialog#^0.0.5",
     "ft-document-grid": "filethis/ft-document-grid#^0.0.8",
     "ft-document-grid-item": "filethis/ft-document-grid-item#^0.0.6",
     "ft-document-list": "filethis/ft-document-list#^0.0.11",
     "ft-document-list-item": "filethis/ft-document-list-item#^0.0.11",
     "ft-labeled-icon-button": "filethis/ft-labeled-icon-button#^0.0.3",
-    "ft-confirmation-dialog": "filethis/ft-confirmation-dialog#^0.0.5",
     "ft-scrolling-behavior": "filethis/ft-scrolling-behavior#^0.0.1",
-    "iron-pages": "PolymerElements/iron-pages#^2.0.0",
-    "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
-    "iron-input": "PolymerElements/iron-input#^2.0.0"
+    "iron-input": "PolymerElements/iron-input#1 - 2",
+    "iron-pages": "PolymerElements/iron-pages#1 - 2",
+    "paper-checkbox": "PolymerElements/paper-checkbox#1 - 2",
+    "paper-icon-button": "PolymerElements/paper-icon-button#1 - 2",
+    "polymer": "Polymer/polymer#1.9 - 2"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
-    "web-component-tester": "^4.0.0",
+    "iron-component-page": "PolymerElements/iron-component-page#1 - 2",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#1 - 2",
+    "iron-test-helpers": "PolymerElements/iron-test-helpers#1 - 2",
+    "web-component-tester": "^6.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0"
   },
   "resolutions": {
-    "polymer": "^2.0.1",
-    "webcomponentsjs": "^v1.0.0"
+    "polymer": "1.9 - 2",
+    "webcomponentsjs": "^1.0.0"
   }
 }
