--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "ft-document-grid-item": "filethis/ft-document-grid-item#^0.0.13",
     "ft-document-list": "filethis/ft-document-list#^0.0.18",
     "ft-document-list-item": "filethis/ft-document-list-item#^0.0.18",
+    "ft-element-demo": "filethis/ft-element-demo#^0.0.1",
     "ft-labeled-icon-button": "filethis/ft-labeled-icon-button#^0.0.10",
     "ft-scrolling-behavior": "filethis/ft-scrolling-behavior#^0.0.8",
     "iron-input": "PolymerElements/iron-input#1 - 2",
