--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,8 @@
     "ft-document-list": "filethis/ft-document-list#^0.0.23",
     "ft-document-list-item": "filethis/ft-document-list-item#^0.0.23",
     "ft-element-demo": "filethis/ft-element-demo#^0.0.9",
+    "ft-error-behavior": "filethis/ft-error-behavior#^0.0.16",
+    "ft-http-behavior": "filethis/ft-http-behavior#^0.0.16",
     "ft-labeled-icon-button": "filethis/ft-labeled-icon-button#^0.0.15",
     "ft-scrolling-behavior": "filethis/ft-scrolling-behavior#^0.0.13",
     "iron-input": "PolymerElements/iron-input#1 - 2",
