--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "ft-http-behavior": "filethis/ft-http-behavior#^0.0.16",
     "ft-labeled-icon-button": "filethis/ft-labeled-icon-button#^0.0.15",
     "ft-scrolling-behavior": "filethis/ft-scrolling-behavior#^0.0.13",
+    "ft-settings": "filethis/ft-settings#^0.0.1",
     "iron-input": "PolymerElements/iron-input#1 - 2",
     "iron-pages": "PolymerElements/iron-pages#1 - 2",
     "paper-checkbox": "PolymerElements/paper-checkbox#1 - 2",
