--- a/bower.json
+++ b/bower.json
@@ -3,16 +3,17 @@
   "description": "A panel that displays a list of FileThis documents",
   "main": "ft-document-panel.html",
   "dependencies": {
-    "ft-confirmation-dialog": "filethis/ft-confirmation-dialog#^0.0.18",
-    "ft-document-grid": "filethis/ft-document-grid#^0.0.20",
-    "ft-document-grid-item": "filethis/ft-document-grid-item#^0.0.18",
-    "ft-document-list": "filethis/ft-document-list#^0.0.23",
-    "ft-document-list-item": "filethis/ft-document-list-item#^0.0.23",
-    "ft-element-demo": "filethis/ft-element-demo#^0.0.9",
-    "ft-error-behavior": "filethis/ft-error-behavior#^0.0.16",
-    "ft-http-behavior": "filethis/ft-http-behavior#^0.0.16",
-    "ft-labeled-icon-button": "filethis/ft-labeled-icon-button#^0.0.15",
-    "ft-scrolling-behavior": "filethis/ft-scrolling-behavior#^0.0.13",
+    "ft-confirmation-dialog": "filethis/ft-confirmation-dialog#^0.0.19",
+    "ft-document-grid": "filethis/ft-document-grid#^0.0.21",
+    "ft-document-grid-item": "filethis/ft-document-grid-item#^0.0.19",
+    "ft-document-list": "filethis/ft-document-list#^0.0.24",
+    "ft-document-list-item": "filethis/ft-document-list-item#^0.0.24",
+    "ft-element-demo": "filethis/ft-element-demo#^0.0.10",
+    "ft-error-behavior": "filethis/ft-error-behavior#^0.0.17",
+    "ft-global-variable": "filethis/ft-global-variable#^0.0.2",
+    "ft-http-behavior": "filethis/ft-http-behavior#^0.0.17",
+    "ft-labeled-icon-button": "filethis/ft-labeled-icon-button#^0.0.16",
+    "ft-scrolling-behavior": "filethis/ft-scrolling-behavior#^0.0.14",
     "ft-settings": "filethis/ft-settings#^0.0.1",
     "iron-input": "PolymerElements/iron-input#1 - 2",
     "iron-pages": "PolymerElements/iron-pages#1 - 2",
