--- a/bower.json
+++ b/bower.json
@@ -15,13 +15,11 @@
     "ft-scrolling-behavior": "filethis/ft-scrolling-behavior#^1.0.18",
     "iron-input": "PolymerElements/iron-input#1 - 2",
     "iron-pages": "PolymerElements/iron-pages#1 - 2",
-    "neon-animation": "PolymerElements/neon-animation#1 - 2",
     "paper-checkbox": "PolymerElements/paper-checkbox#1 - 2",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#1 - 2",
     "paper-item": "PolymerElements/paper-item#1 - 2",
     "paper-icon-button": "PolymerElements/paper-icon-button#1 - 2",
-    "polymer": "Polymer/polymer#1.9 - 2",
-    "web-animations-js": "web-animations/web-animations-js#^2.3.1"
+    "polymer": "Polymer/polymer#1.9 - 2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#1 - 2",
