--- a/bower.json
+++ b/bower.json
@@ -13,19 +13,19 @@
     "ft-http-behavior": "filethis/ft-http-behavior#^1.0.21",
     "ft-labeled-icon-button": "filethis/ft-labeled-icon-button#^1.0.20",
     "ft-scrolling-behavior": "filethis/ft-scrolling-behavior#^1.0.18",
-    "iron-input": "PolymerElements/iron-input#1 - 2",
-    "iron-pages": "PolymerElements/iron-pages#1 - 2",
-    "paper-checkbox": "PolymerElements/paper-checkbox#1 - 2",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#1 - 2",
-    "paper-item": "PolymerElements/paper-item#1 - 2",
-    "paper-icon-button": "PolymerElements/paper-icon-button#1 - 2",
-    "polymer": "Polymer/polymer#1.9 - 2"
+    "iron-input": "PolymerElements/iron-input#2.1.3",
+    "iron-pages": "PolymerElements/iron-pages#2.1.1",
+    "paper-checkbox": "PolymerElements/paper-checkbox#2.0.4",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#2.1.0",
+    "paper-item": "PolymerElements/paper-item#2.1.1",
+    "paper-icon-button": "PolymerElements/paper-icon-button#2.2.0",
+    "polymer": "Polymer/polymer#^2.7.0"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#1 - 2",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#1 - 2",
-    "iron-test-helpers": "PolymerElements/iron-test-helpers#1 - 2",
-    "web-component-tester": "Polymer/web-component-tester#^6.0.0",
+    "iron-component-page": "PolymerElements/iron-component-page#2.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#2.1.2",
+    "iron-test-helpers": "PolymerElements/iron-test-helpers#2.0.1",
+    "web-component-tester": "Polymer/web-component-tester#^6.5.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.2.7"
   }
  }
