--- a/package.json
+++ b/package.json
@@ -9,6 +9,24 @@
     "type-detect": "1.0.0"
   },
   "main": "ft-document-panel.js",
+  "files": [
+    "*.html",
+    "*.js",
+    "*.make",
+    "*.png",
+    "*.svg",
+    ".yalc/",
+    "data/",
+    "demo/",
+    "test/",
+    ".babelrc",
+    ".eslintrc.json",
+    ".gitignore",
+    "LICENSE",
+    "Makefile",
+    "manifest.json",
+    "polymer.json"
+  ],
   "dependencies": {
     "@polymer/iron-input": "^3.0.0",
     "@polymer/iron-label": "^3.0.0",
